--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>I am a passionate and dedicated beginner photographer and graphic designer located in the vibrant cities of Harare and Bulawayo. With a strong foundation in Illustrator, Photoshop, and Capture One, I possess the technical skills necessary to bring your creative visions to life.As a designer, I am committed to going above and beyond to ensure that your goals are achieved and your visions are fully realized. I understand the importance of collaboration and effective communication in order to create exceptional visual solutions. Whether you need assistance with photo retouching, image manipulation, or designing captivating graphics, I am here to help you every step of the way.</p>
+					<p>My goal is to provide you with high-quality work that not only meets your expectations but exceeds them. I am constantly honing my skills and staying up-to-date with the latest industry trends to deliver innovative and contemporary designs. I am open to feedback and strive to incorporate your ideas and preferences into the final product.
+					<p>By entrusting me with your projects, you can expect professionalism, attention to detail, and a strong work ethic. I am excited about the opportunity to collaborate with you and contribute to the success of your creative endeavors. Let's work together to turn your concepts into visually stunning realities.
+					Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -122,11 +124,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Photographer</h3>
+									<span class="company">Skyrockers Pro Media - 2023 - 2024</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>As a skilled photographer, I have successfully coordinated photo shoots by collaborating with clients and securing suitable locations. I have a strong ability to enhance photos digitally and provide guidance to clients regarding poses, wardrobe, and backgrounds. Additionally, I am proficient in editing, captioning, and uploading photos for publication, ensuring timely delivery. I am meticulous in maintaining a well-organized photo archive with consistent naming conventions. With a wide range of camera equipment, props, and lighting techniques at my disposal, I consistently capture optimal shots. I stay updated on current photography trends, demonstrating my industry awareness and commitment to delivering high-quality work.</p>
 								</div>
 							</div>
 						</li>
