--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.facebook.com/profile.php?id=100012071889350"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/mnqobi-samuel-dube-081713195/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 								</ul>
 							</p>
@@ -92,13 +92,12 @@
 					<h2>Hello There!</h2>
 					<p>I am a passionate and dedicated beginner photographer and graphic designer located in the vibrant cities of Harare and Bulawayo. With a strong foundation in Illustrator, Photoshop, and Capture One, I possess the technical skills necessary to bring your creative visions to life.As a designer, I am committed to going above and beyond to ensure that your goals are achieved and your visions are fully realized. I understand the importance of collaboration and effective communication in order to create exceptional visual solutions. Whether you need assistance with photo retouching, image manipulation, or designing captivating graphics, I am here to help you every step of the way.</p>
 					<p>My goal is to provide you with high-quality work that not only meets your expectations but exceeds them. I am constantly honing my skills and staying up-to-date with the latest industry trends to deliver innovative and contemporary designs. I am open to feedback and strive to incorporate your ideas and preferences into the final product.
-					<p>By entrusting me with your projects, you can expect professionalism, attention to detail, and a strong work ethic. I am excited about the opportunity to collaborate with you and contribute to the success of your creative endeavors. Let's work together to turn your concepts into visually stunning realities.
-					Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>By entrusting me with your projects, you can expect professionalism, attention to detail, and a strong work ethic. I am excited about the opportunity to collaborate with you and contribute to the success of your creative endeavors. Let's work together to turn your concepts into visually stunning realities.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=100012071889350"><i class="icon-facebook3"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/mnqobi-samuel-dube-081713195/"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 						</ul>
 					</p>
@@ -124,7 +123,7 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Photographer</h3>
+									<h3 class="timeline-title">Studio Photographer</h3>
 									<span class="company">Skyrockers Pro Media - 2023 - 2024</span>
 								</div>
 								<div class="timeline-body">
@@ -136,11 +135,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Freelance Photographer</h3>
+									<span class="company">Self-Employed - 2020 - 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>I crafted captivating portraiture and orchestrated seamless photoshoot events for diverse clients, collaborating closely with them to conceptualize shoots aligned with their vision and goals. By utilizing professional photography equipment, I directed individuals and groups for natural, flattering, and personalized portraits that reflected their unique personalities. Efficiently managing logistics, scheduling, and communication, I ensured smooth and successful photoshoot experiences. I delivered expertly edited and retouched images that consistently exceeded client expectations, providing excellent communication, flexibility, and dedication to understanding and exceeding client needs. I partnered with individuals and businesses seeking exceptional portraiture and engaging visual content to elevate their brand or personal story.</p>
 								</div>
 							</div>
 						</li>
